--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,6 +5,9 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  schedule:
+    - cron: '*/1 * * * *'
+  
   workflow_dispatch:
 
 jobs:
@@ -19,5 +22,6 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
+
 
  
