--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,6 +1,8 @@
 name: Run Python Script
 
+
 on:
+
   push:
     branches: [ main ]
   pull_request:
@@ -11,7 +13,7 @@ on:
 
 jobs:
   run-python-script:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
       - name: Checkout code
