--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,4 +23,6 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
+      - name: Run whoami
+        run: whoami
 
