--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,6 +23,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
-      - name: Run whoami
-        run: whoami
+          
+      - name: Run shell script in /home/ragu
+        run: bash /home/ragu/test.sh
 
