--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,15 +12,10 @@ on:
 jobs:
   build:
     runs-on: self-hosted
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.12
-
-    - name: Execute px-data.sh as pxdata user
-      run: pwd
+      - name: Run workspecr in /ragu
+        run: |
+          cd /home/pxdata/ragu
+      - name: Checkout code
+        uses: actions/checkout@v4
