--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,4 +20,4 @@ jobs:
         working-directory: /home/pxdata/ragu
         run: |
           # Add your build or script commands here
-            sudo mv ${{ github.workspace }} /home/pxdata/ragu
+            sudo cp -r ${{ github.workspace }} /home/pxdata/ragu
