--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,7 +14,7 @@ on:
  
 jobs:
   build:
-    runs-on: iam-dev-github-slave
+    runs-on: self-hosted
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
